--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,21 @@ services:
     volumes:
       - ./interview-challenge-backend:/app
       - /app/node_modules
+    depends_on:
+      - mysql
+
+  mysql:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=challengedb
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+
+volumes:
+  mysql_data:
