--- a/interview-challenge-frontend/package.json
+++ b/interview-challenge-frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -26,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.0",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
