--- a/interview-challenge-backend/.prettierrc
+++ b/interview-challenge-backend/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 80
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false
 }
