--- a/interview-challenge-frontend/.prettierrc
+++ b/interview-challenge-frontend/.prettierrc
@@ -1,6 +1,8 @@
 {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "printWidth": 80
-  }
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false
+}
